examples/components/error/error-message-name.njk
{% from "components/form/controls/text-input.njk" import textinput as textinput %}

{{
    textinput({
        "id": "fullname-error-example",
        "name": "fullname-error-example",
        "label": "Hvad er dit fulde navn?",
        "errorMessage": "Skriv dit fulde navn, og adskil for- og efternavne med mellemrum, fx Anders Andersen"
    })
}}